<resources>
    <string name="app_name">Oasis Familiar</string>
    <string name="btnLogin">Ingresar</string>
    <string name="btnMenu">Menu</string>
    <string name="btnMesas">Ver Mesas</string>
    <string name="oasis">Imagen Logo</string>
    <string name="btnClear">Limpiar</string>
    <string name="txtName">Ingrese su usuario</string>
    <string name="txtpassword">Ingrese Contrasena</string>
</resources>